--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "usbx"]
 	path = usbx
 	url = https://github.com/eclipse-threadx/usbx.git
+[submodule "netxduo"]
+	path = netxduo
+	url = https://github.com/eclipse-threadx/netxduo.git
